--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,18 +12,41 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.QuizOnline"
         tools:targetApi="31">
-        <activity
-            android:name=".QuizActivity"
-            android:exported="false" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action" />
+
+
+            </intent-filter>
+        </activity>
+
+
+
+
+        <activity
+            android:name=".QuizActivity"
+            android:exported="false" />
+
+        <activity android:name="com.codingstuff.loginandsignup.SignInActivity"
+            android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+
         </activity>
+
+        <activity android:name="com.codingstuff.loginandsignup.SignUpActivity"
+            android:exported="true">
+
+        </activity>
+
     </application>
 
 </manifest>
